Fix 3- Working Links

--- a/index.html
+++ b/index.html
@@ -115,16 +115,17 @@
         <td><a href="https://en.wikipedia.org/wiki/Charles%27s_law" target="_blank">“Charles’s law” — Wikipedia</a></td>
         <td>Clearly states how gas expands with temperature when pressure is constant.</td>
       </tr>
-      <tr>
-        <td>Thermal Expansion / Gas Behavior</td>
-        <td><a href="https://courses.lumenlearning.com/physics/chapter/10-4-relating-pressure-volume-amount-and-temperature-the-ideal-gas-law/" target="_blank">“Relating Pressure, Volume, Amount, and Temperature (Ideal Gas)” — Lumen Learning</a></td>
-        <td>Helps show the direct proportionality between temperature and pressure under constant volume.</td>
-      </tr>
-      <tr>
-        <td>Air Density and Temperature Differences</td>
-        <td><a href="https://www.omicsonline.org/open-access/ideal-gas-law-and-the-greenhouse-effect-2162-0384-1000183.php?aid=89494" target="_blank">“Ideal Gas Law and the Greenhouse Effect” — OMICS / open access article</a></td>
-        <td>Connects density, pressure, and temperature in atmospheric context.</td>
-      </tr>
+     <tr>
+		<td>Thermal Expansion / Gas Behavior</td>
+		<td><a href="https://courses.lumenlearning.com/suny-albany-chemistry/chapter/relating-pressure-volume-amount-and-temperature-the-ideal-gas-law/" target="_blank">“Relating Pressure, Volume, Amount, and Temperature (Ideal Gas)” — Lumen Learning / PressBooks</a></td>
+		<td>Helps show the direct proportionality between temperature and pressure under constant volume.</td>
+	</tr>
+	<tr>
+		<td>Air Density and Temperature Differences</td>
+		<td><a href="https://www.omicsonline.org/open-access/ideal-gas-law-and-the-greenhouse-effect-2157-7617-1000468-101034.html" target="_blank">“Ideal Gas Law and the Greenhouse Effect” — OMICS Open Access Article</a></td>
+		<td>Connects density, pressure, and temperature in atmospheric / greenhouse context.</td>
+	</tr>
+
       <tr>
         <td>Greenhouse Effect</td>
         <td><a href="https://climate.nasa.gov/faq/19/what-is-the-greenhouse-effect/" target="_blank">“What is the greenhouse effect?” — NASA</a></td>
